Changelog
=========

6.2.0 (2010-XX-XX)
------------------

 * deprecated Swift_CharacterStream_ArrayCharacterStream and Swift_CharacterStream_NgCharacterStream in favor of Swift_CharacterStream_CharacterStream

6.1.3 (2018-09-11)
------------------

 * added auto-start to the SMTP transport when sending a message
 * tweaked error message when the response from an SMTP server is empty
 * fixed missing property in Swift_Mime_IdGenerator
 * exposed original body content type with Swift_Mime_SimpleMimeEntity::getBodyContentType()
 * fixed typo in variable name in Swift_AddressEncoder_IdnAddressEncoder
 * fixed return type in MessageLogger
 * fixed missing property addressEncoder in SimpleHeaderFactory class

6.1.2 (2018-07-13)
------------------

 * handled recipient errors when pipelining

6.1.1 (2018-07-04)
------------------

 * removed hard dependency on an IDN encoder

6.1.0 (2018-07-02)
------------------

 * added address encoder exceptions during send
 * added support for bubbling up authenticator error messages
 * added support for non-ASCII email addresses
 * introduced new dependencies: transport.smtphandlers and transport.authhandlers
 * deprecated Swift_Signers_OpenDKIMSigner; use Swift_Signers_DKIMSigner instead
 * added support for SMTP pipelining
 * added Swift_Transport_Esmtp_EightBitMimeHandler
 * fixed startTLS only allowed tls1.0, now allowed: tls1.0, tls1.1, tls1.2

6.0.2 (2017-09-30)
------------------

 * fixed DecoratorPlugin
 * removed usage of getmypid()

6.0.1 (2017-05-20)
------------------

 * fixed BC break that can be avoided easily

6.0.0 (2017-05-19)
------------------

 * added Swift_Transport::ping()
 * removed Swift_Mime_HeaderFactory, Swift_Mime_HeaderSet, Swift_Mime_Message, Swift_Mime_MimeEntity,
   and Swift_Mime_ParameterizedHeader interfaces
 * removed Swift_MailTransport and Swift_Transport_MailTransport
 * removed Swift_Encoding
 * removed the Swift_Transport_MailInvoker interface and Swift_Transport_SimpleMailInvoker class